maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:12: error: Invalid literal number
    for (x<- 0to i){
             ^ShortestPathMaze:12: error: illegal start of simple expression
    for (x<- 0to i){
             ^ShortestPathMaze:21: error: ')' expected but '}' found.
  }
  ^